Sintatico/MiniJava/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On PUBLIC shift to state 1
-- On programa shift to state 175

State 1:
programa -> PUBLIC . CLASS ID ACHAVE funcoes FCHAVE EOF [ # ]
-- On CLASS shift to state 2

State 2:
programa -> PUBLIC CLASS . ID ACHAVE funcoes FCHAVE EOF [ # ]
-- On ID shift to state 3

State 3:
programa -> PUBLIC CLASS ID . ACHAVE funcoes FCHAVE EOF [ # ]
-- On ACHAVE shift to state 4

State 4:
programa -> PUBLIC CLASS ID ACHAVE . funcoes FCHAVE EOF [ # ]
-- On PUBLIC shift to state 5
-- On funcoes shift to state 170
-- On declaracao_funcao shift to state 173
-- On FCHAVE reduce production funcoes -> 

State 5:
declaracao_funcao -> PUBLIC . STATIC tipo ID APAR lista_parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC FCHAVE ]
-- On STATIC shift to state 6

State 6:
declaracao_funcao -> PUBLIC STATIC . tipo ID APAR lista_parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC FCHAVE ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On CHAR shift to state 11
-- On BOOLEAN shift to state 12
-- On tipo shift to state 13

State 7:
tipo -> VOID . [ ID ]
-- On ID reduce production tipo -> VOID 

State 8:
tipo -> STRING . [ ID ]
-- On ID reduce production tipo -> STRING 

State 9:
tipo -> INT . [ ID ]
-- On ID reduce production tipo -> INT 

State 10:
tipo -> FLOAT . [ ID ]
-- On ID reduce production tipo -> FLOAT 

State 11:
tipo -> CHAR . [ ID ]
-- On ID reduce production tipo -> CHAR 

State 12:
tipo -> BOOLEAN . [ ID ]
-- On ID reduce production tipo -> BOOLEAN 

State 13:
declaracao_funcao -> PUBLIC STATIC tipo . ID APAR lista_parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC FCHAVE ]
-- On ID shift to state 14

State 14:
declaracao_funcao -> PUBLIC STATIC tipo ID . APAR lista_parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC FCHAVE ]
-- On APAR shift to state 15

State 15:
declaracao_funcao -> PUBLIC STATIC tipo ID APAR . lista_parametros FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC FCHAVE ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On CHAR shift to state 11
-- On BOOLEAN shift to state 12
-- On tipo shift to state 16
-- On parametro shift to state 18
-- On lista_parametros shift to state 21
-- On FPAR reduce production lista_parametros -> 

State 16:
parametro -> tipo . ID [ VIRG FPAR ]
-- On ID shift to state 17

State 17:
parametro -> tipo ID . [ VIRG FPAR ]
-- On VIRG reduce production parametro -> tipo ID 
-- On FPAR reduce production parametro -> tipo ID 

State 18:
lista_parametros -> parametro . [ FPAR ]
lista_parametros -> parametro . VIRG lista_parametros [ FPAR ]
-- On VIRG shift to state 19
-- On FPAR reduce production lista_parametros -> parametro 

State 19:
lista_parametros -> parametro VIRG . lista_parametros [ FPAR ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On CHAR shift to state 11
-- On BOOLEAN shift to state 12
-- On tipo shift to state 16
-- On parametro shift to state 18
-- On lista_parametros shift to state 20
-- On FPAR reduce production lista_parametros -> 

State 20:
lista_parametros -> parametro VIRG lista_parametros . [ FPAR ]
-- On FPAR reduce production lista_parametros -> parametro VIRG lista_parametros 

State 21:
declaracao_funcao -> PUBLIC STATIC tipo ID APAR lista_parametros . FPAR ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC FCHAVE ]
-- On FPAR shift to state 22

State 22:
declaracao_funcao -> PUBLIC STATIC tipo ID APAR lista_parametros FPAR . ACHAVE list(declaracao) comandos FCHAVE [ PUBLIC FCHAVE ]
-- On ACHAVE shift to state 23

State 23:
declaracao_funcao -> PUBLIC STATIC tipo ID APAR lista_parametros FPAR ACHAVE . list(declaracao) comandos FCHAVE [ PUBLIC FCHAVE ]
-- On VOID shift to state 7
-- On STRING shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On CHAR shift to state 11
-- On BOOLEAN shift to state 12
-- On tipo shift to state 24
-- On list(declaracao) shift to state 30
-- On declaracao shift to state 168
-- On WHILE reduce production list(declaracao) -> 
-- On SWITCH reduce production list(declaracao) -> 
-- On RETURN reduce production list(declaracao) -> 
-- On PRINT reduce production list(declaracao) -> 
-- On IF reduce production list(declaracao) -> 
-- On ID reduce production list(declaracao) -> 
-- On FOR reduce production list(declaracao) -> 
-- On FCHAVE reduce production list(declaracao) -> 

State 24:
declaracao -> tipo . separated_nonempty_list(VIRG,ID) PTV [ WHILE VOID SWITCH STRING RETURN PRINT INT IF ID FOR FLOAT FCHAVE CHAR BOOLEAN ]
-- On ID shift to state 25
-- On separated_nonempty_list(VIRG,ID) shift to state 28

State 25:
separated_nonempty_list(VIRG,ID) -> ID . [ PTV ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ PTV ]
-- On VIRG shift to state 26
-- On PTV reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 26:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ PTV ]
-- On ID shift to state 25
-- On separated_nonempty_list(VIRG,ID) shift to state 27

State 27:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ PTV ]
-- On PTV reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 28:
declaracao -> tipo separated_nonempty_list(VIRG,ID) . PTV [ WHILE VOID SWITCH STRING RETURN PRINT INT IF ID FOR FLOAT FCHAVE CHAR BOOLEAN ]
-- On PTV shift to state 29

State 29:
declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV . [ WHILE VOID SWITCH STRING RETURN PRINT INT IF ID FOR FLOAT FCHAVE CHAR BOOLEAN ]
-- On WHILE reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On VOID reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On SWITCH reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On STRING reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On RETURN reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On PRINT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On INT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On IF reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On ID reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On FOR reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On FLOAT reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On FCHAVE reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On CHAR reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 
-- On BOOLEAN reduce production declaracao -> tipo separated_nonempty_list(VIRG,ID) PTV 

State 30:
declaracao_funcao -> PUBLIC STATIC tipo ID APAR lista_parametros FPAR ACHAVE list(declaracao) . comandos FCHAVE [ PUBLIC FCHAVE ]
-- On WHILE shift to state 31
-- On SWITCH shift to state 83
-- On RETURN shift to state 91
-- On PRINT shift to state 93
-- On IF shift to state 97
-- On ID shift to state 102
-- On FOR shift to state 119
-- On comandos shift to state 166
-- On comando_s shift to state 131
-- On comando shift to state 133
-- On cmd_while shift to state 136
-- On cmd_switch shift to state 137
-- On cmd_return shift to state 138
-- On cmd_print shift to state 139
-- On cmd_incr shift to state 140
-- On cmd_if shift to state 141
-- On cmd_for shift to state 142
-- On cmd_decr shift to state 143
-- On cmd_atrib shift to state 144
-- On FCHAVE reduce production comandos -> 

State 31:
cmd_while -> WHILE . APAR expr FPAR ACHAVE comandos FCHAVE [ WHILE SWITCH RETURN PRINT IF ID FOR FCHAVE BREAK ]
-- On APAR shift to state 32

State 32:
cmd_while -> WHILE APAR . expr FPAR ACHAVE comandos FCHAVE [ WHILE SWITCH RETURN PRINT IF ID FOR FCHAVE BREAK ]
-- On NOT shift to state 33
-- On MENOS shift to state 34
-- On LITSTRING shift to state 35
-- On LITINT shift to state 36
-- On LITFLOAT shift to state 37
-- On LITCHAR shift to state 38
-- On LITBOOL shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On expr shift to state 80

State 33:
expr -> NOT . expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On NOT shift to state 33
-- On MENOS shift to state 34
-- On LITSTRING shift to state 35
-- On LITINT shift to state 36
-- On LITFLOAT shift to state 37
-- On LITCHAR shift to state 38
-- On LITBOOL shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On expr shift to state 79

State 34:
expr -> MENOS . expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On NOT shift to state 33
-- On MENOS shift to state 34
-- On LITSTRING shift to state 35
-- On LITINT shift to state 36
-- On LITFLOAT shift to state 37
-- On LITCHAR shift to state 38
-- On LITBOOL shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On expr shift to state 78

State 35:
expr -> LITSTRING . [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On VIRG reduce production expr -> LITSTRING 
-- On VEZES reduce production expr -> LITSTRING 
-- On PTV reduce production expr -> LITSTRING 
-- On OULOG reduce production expr -> LITSTRING 
-- On MOD reduce production expr -> LITSTRING 
-- On MENOS reduce production expr -> LITSTRING 
-- On MENORIGUAL reduce production expr -> LITSTRING 
-- On MENOR reduce production expr -> LITSTRING 
-- On MAIS reduce production expr -> LITSTRING 
-- On MAIORIGUAL reduce production expr -> LITSTRING 
-- On MAIOR reduce production expr -> LITSTRING 
-- On IGUAL reduce production expr -> LITSTRING 
-- On FPAR reduce production expr -> LITSTRING 
-- On ELOG reduce production expr -> LITSTRING 
-- On DPTOS reduce production expr -> LITSTRING 
-- On DIV reduce production expr -> LITSTRING 
-- On DIFER reduce production expr -> LITSTRING 

State 36:
expr -> LITINT . [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On VIRG reduce production expr -> LITINT 
-- On VEZES reduce production expr -> LITINT 
-- On PTV reduce production expr -> LITINT 
-- On OULOG reduce production expr -> LITINT 
-- On MOD reduce production expr -> LITINT 
-- On MENOS reduce production expr -> LITINT 
-- On MENORIGUAL reduce production expr -> LITINT 
-- On MENOR reduce production expr -> LITINT 
-- On MAIS reduce production expr -> LITINT 
-- On MAIORIGUAL reduce production expr -> LITINT 
-- On MAIOR reduce production expr -> LITINT 
-- On IGUAL reduce production expr -> LITINT 
-- On FPAR reduce production expr -> LITINT 
-- On ELOG reduce production expr -> LITINT 
-- On DPTOS reduce production expr -> LITINT 
-- On DIV reduce production expr -> LITINT 
-- On DIFER reduce production expr -> LITINT 

State 37:
expr -> LITFLOAT . [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On VIRG reduce production expr -> LITFLOAT 
-- On VEZES reduce production expr -> LITFLOAT 
-- On PTV reduce production expr -> LITFLOAT 
-- On OULOG reduce production expr -> LITFLOAT 
-- On MOD reduce production expr -> LITFLOAT 
-- On MENOS reduce production expr -> LITFLOAT 
-- On MENORIGUAL reduce production expr -> LITFLOAT 
-- On MENOR reduce production expr -> LITFLOAT 
-- On MAIS reduce production expr -> LITFLOAT 
-- On MAIORIGUAL reduce production expr -> LITFLOAT 
-- On MAIOR reduce production expr -> LITFLOAT 
-- On IGUAL reduce production expr -> LITFLOAT 
-- On FPAR reduce production expr -> LITFLOAT 
-- On ELOG reduce production expr -> LITFLOAT 
-- On DPTOS reduce production expr -> LITFLOAT 
-- On DIV reduce production expr -> LITFLOAT 
-- On DIFER reduce production expr -> LITFLOAT 

State 38:
expr -> LITCHAR . [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On VIRG reduce production expr -> LITCHAR 
-- On VEZES reduce production expr -> LITCHAR 
-- On PTV reduce production expr -> LITCHAR 
-- On OULOG reduce production expr -> LITCHAR 
-- On MOD reduce production expr -> LITCHAR 
-- On MENOS reduce production expr -> LITCHAR 
-- On MENORIGUAL reduce production expr -> LITCHAR 
-- On MENOR reduce production expr -> LITCHAR 
-- On MAIS reduce production expr -> LITCHAR 
-- On MAIORIGUAL reduce production expr -> LITCHAR 
-- On MAIOR reduce production expr -> LITCHAR 
-- On IGUAL reduce production expr -> LITCHAR 
-- On FPAR reduce production expr -> LITCHAR 
-- On ELOG reduce production expr -> LITCHAR 
-- On DPTOS reduce production expr -> LITCHAR 
-- On DIV reduce production expr -> LITCHAR 
-- On DIFER reduce production expr -> LITCHAR 

State 39:
expr -> LITBOOL . [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On VIRG reduce production expr -> LITBOOL 
-- On VEZES reduce production expr -> LITBOOL 
-- On PTV reduce production expr -> LITBOOL 
-- On OULOG reduce production expr -> LITBOOL 
-- On MOD reduce production expr -> LITBOOL 
-- On MENOS reduce production expr -> LITBOOL 
-- On MENORIGUAL reduce production expr -> LITBOOL 
-- On MENOR reduce production expr -> LITBOOL 
-- On MAIS reduce production expr -> LITBOOL 
-- On MAIORIGUAL reduce production expr -> LITBOOL 
-- On MAIOR reduce production expr -> LITBOOL 
-- On IGUAL reduce production expr -> LITBOOL 
-- On FPAR reduce production expr -> LITBOOL 
-- On ELOG reduce production expr -> LITBOOL 
-- On DPTOS reduce production expr -> LITBOOL 
-- On DIV reduce production expr -> LITBOOL 
-- On DIFER reduce production expr -> LITBOOL 

State 40:
expr -> ID . APAR argumentos FPAR [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
variavel -> ID . [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On APAR shift to state 41
-- On VIRG reduce production variavel -> ID 
-- On VEZES reduce production variavel -> ID 
-- On PTV reduce production variavel -> ID 
-- On OULOG reduce production variavel -> ID 
-- On MOD reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On ELOG reduce production variavel -> ID 
-- On DPTOS reduce production variavel -> ID 
-- On DIV reduce production variavel -> ID 
-- On DIFER reduce production variavel -> ID 

State 41:
expr -> ID APAR . argumentos FPAR [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On NOT shift to state 33
-- On MENOS shift to state 34
-- On LITSTRING shift to state 35
-- On LITINT shift to state 36
-- On LITFLOAT shift to state 37
-- On LITCHAR shift to state 38
-- On LITBOOL shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On seq_expr shift to state 72
-- On expr shift to state 73
-- On argumentos shift to state 76
-- On FPAR reduce production seq_expr -> 

State 42:
expr -> APAR . expr FPAR [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On NOT shift to state 33
-- On MENOS shift to state 34
-- On LITSTRING shift to state 35
-- On LITINT shift to state 36
-- On LITFLOAT shift to state 37
-- On LITCHAR shift to state 38
-- On LITBOOL shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On expr shift to state 44

State 43:
expr -> variavel . [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On VIRG reduce production expr -> variavel 
-- On VEZES reduce production expr -> variavel 
-- On PTV reduce production expr -> variavel 
-- On OULOG reduce production expr -> variavel 
-- On MOD reduce production expr -> variavel 
-- On MENOS reduce production expr -> variavel 
-- On MENORIGUAL reduce production expr -> variavel 
-- On MENOR reduce production expr -> variavel 
-- On MAIS reduce production expr -> variavel 
-- On MAIORIGUAL reduce production expr -> variavel 
-- On MAIOR reduce production expr -> variavel 
-- On IGUAL reduce production expr -> variavel 
-- On FPAR reduce production expr -> variavel 
-- On ELOG reduce production expr -> variavel 
-- On DPTOS reduce production expr -> variavel 
-- On DIV reduce production expr -> variavel 
-- On DIFER reduce production expr -> variavel 

State 44:
expr -> APAR expr . FPAR [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . OULOG expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . ELOG expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . IGUAL expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . DIFER expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . MAIOR expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . MENOR expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . MAIORIGUAL expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . MENORIGUAL expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . MAIS expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . MENOS expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . VEZES expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . DIV expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
expr -> expr . MOD expr [ VEZES OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DIV DIFER ]
-- On VEZES shift to state 45
-- On OULOG shift to state 47
-- On MOD shift to state 49
-- On MENOS shift to state 51
-- On MENORIGUAL shift to state 55
-- On MENOR shift to state 59
-- On MAIS shift to state 57
-- On MAIORIGUAL shift to state 61
-- On MAIOR shift to state 63
-- On IGUAL shift to state 65
-- On FPAR shift to state 71
-- On ELOG shift to state 67
-- On DIV shift to state 53
-- On DIFER shift to state 69

State 45:
expr -> expr VEZES . expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On NOT shift to state 33
-- On MENOS shift to state 34
-- On LITSTRING shift to state 35
-- On LITINT shift to state 36
-- On LITFLOAT shift to state 37
-- On LITCHAR shift to state 38
-- On LITBOOL shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On expr shift to state 46

State 46:
expr -> expr . OULOG expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . ELOG expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . IGUAL expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . DIFER expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . MAIOR expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . MENOR expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . MAIORIGUAL expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . MENORIGUAL expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . MAIS expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . MENOS expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . VEZES expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr VEZES expr . [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . DIV expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
expr -> expr . MOD expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On VIRG reduce production expr -> expr VEZES expr 
-- On VEZES reduce production expr -> expr VEZES expr 
-- On PTV reduce production expr -> expr VEZES expr 
-- On OULOG reduce production expr -> expr VEZES expr 
-- On MOD reduce production expr -> expr VEZES expr 
-- On MENOS reduce production expr -> expr VEZES expr 
-- On MENORIGUAL reduce production expr -> expr VEZES expr 
-- On MENOR reduce production expr -> expr VEZES expr 
-- On MAIS reduce production expr -> expr VEZES expr 
-- On MAIORIGUAL reduce production expr -> expr VEZES expr 
-- On MAIOR reduce production expr -> expr VEZES expr 
-- On IGUAL reduce production expr -> expr VEZES expr 
-- On FPAR reduce production expr -> expr VEZES expr 
-- On ELOG reduce production expr -> expr VEZES expr 
-- On DPTOS reduce production expr -> expr VEZES expr 
-- On DIV reduce production expr -> expr VEZES expr 
-- On DIFER reduce production expr -> expr VEZES expr 

State 47:
expr -> expr OULOG . expr [ VIRG VEZES PTV OULOG MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR ELOG DPTOS DIV DIFER ]
-- On NOT shift to state 33
-- On MENOS shift to state 34
-- On LITSTRING shift to state 35
-- On LITINT shift to state 36
-- On LITFLOAT shift to state 37
-- On LITCHAR shift to state 38
-- On LITBOOL shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On expr shift to state 48
